--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8"
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="menu">
         <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
-        <nav class="nav menu__nav">
+        <nav class="nav menu__nav" id="menu">
           <a href="#main" class="nav__item">Главная</a>
           <a href="#projects" class="nav__item">Проекты</a>
           <a href="#" class="nav__item">Замер</a>
@@ -31,7 +31,7 @@
     <!-- /.container -->
   </header>
   <main>
-    <a name="main"></a>
+    <a id="main"></a>
     <section class="hero">
       <div class="instagram hero__instagram">
         <a href="#" class="instagram__link">instagram</a>
@@ -56,7 +56,7 @@
         data-wow-duration="2s">листайте вниз</a>
     </section>
 
-  <a name="projects"></a>
+  <a id="projects"></a>
   <section class="section section--dark projects">
     <div class="container">
       <div class="row">
@@ -143,13 +143,13 @@
             <div class="swiper-wrapper swiper-no-swiping">
               <!-- Slides -->
               <div class="swiper-slide swiper-slide__img">
-                <img src="../img/project.jpg" alt="project">
+                <img src="img/project.jpg" alt="project">
               </div>
               <div class="swiper-slide swiper-slide__img">
-                <img src="../img/project.jpg" alt="project">
+                <img src="img/project.jpg" alt="project">
               </div>
               <div class="swiper-slide swiper-slide__img">
-                <img src="../img/project.jpg" alt="project">
+                <img src="img/project.jpg" alt="project">
               </div>
             </div>
           </div>
@@ -173,7 +173,7 @@
       </div>
 
       <div class="control__video video">
-        <img src="../img/play-icon.svg" alt="play" class="video__play">
+        <img src="img/play-icon.svg" alt="play" class="video__play">
       </div>
       <!-- /.control__video video -->
 
@@ -183,16 +183,16 @@
         Оставьте заявку ниже чтобы получить ссылку на трансляцию.
       </p>
 
-       <form action="#" class="form control__form">
+       <form action="php/send_control.php" method="POST" class="form control__form">
 
          <div class="control__input-group">
-           <label for="user-name" class="label form__label control__label">Имя</label>
-           <input type="text" name="userName" class="input--dark form__input control__input" id="user-name" placeholder="Как вас зовут:">
+           <label for="user-name-control" class="label form__label control__label">Имя</label>
+           <input type="text" name="userName" class="input--dark form__input control__input" id="user-name-control" placeholder="Как вас зовут:">
          </div>
 
          <div class="control__input-group">
-           <label for="user-phone" class="label form__label control__label">Телефон</label>
-           <input type="tel" name="userPhone" class="input--dark form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+           <label for="user-phone-control" class="label form__label control__label">Телефон</label>
+           <input type="tel" name="userPhone" class="input--dark form__input control__input" id="user-phone-control" placeholder="Ваш номер телефона:">
          </div>
 
          <button class="button button--primary control__button">Отправить</button>
@@ -385,23 +385,23 @@
     <div class="container">
       <div class="footer__wrap">
         <h3 class="footer__title">Остались вопросы?</h3>
-        <form action="#" class="form footer__form">
+        <form action="php/send_footer.php" method="POST" class="form footer__form">
 
           <div class="input-group footer__input-group">
-            <label for="user-name" class="label form__label footer__form_label label--light">Имя</label>
-            <input type="text" name="userName" class="input input--light form__input footer__input" id="user-name"
+            <label for="user-name-footer" class="label form__label footer__form_label label--light">Имя</label>
+            <input type="text" name="userName" class="input input--light form__input footer__input" id="user-name-footer"
               placeholder="Как вас зовут:">
           </div>
 
           <div class="input-group footer__input-group">
-            <label for="user-phone" class="label form__label footer__form_label label--light">Телефон</label>
-            <input type="tel" name="userPhone" class="input input--light form__input footer__input" id="user-phone"
+            <label for="user-phone-footer" class="label form__label footer__form_label label--light">Телефон</label>
+            <input type="tel" name="userPhone" class="input input--light form__input footer__input" id="user-phone-footer"
               placeholder="Ваш номер телефона:">
           </div>
 
           <div class="input-group footer__input-group footer__input-group--full-width">
-            <label for="user-question" class="label form__label footer__form_label label--light">Вопрос</label>
-            <input type="text" name="userQuestion" class="input input--light form__input footer__input" id="user-question"
+            <label for="user-question-footer" class="label form__label footer__form_label label--light">Вопрос</label>
+            <input type="text" name="userQuestion" class="input input--light form__input footer__input" id="user-question-footer"
               placeholder="Я хочу спросить:">
           </div>
           
@@ -412,12 +412,10 @@
           </div>
           <!-- /.policy -->
           <button class="button button--primary footer__button">Отправить</button>
-
+          <a id="contacts"></a>
         </form>
-
       </div>
       <!-- /.footer-wrap -->
-      <a name="contacts"></a>
       <h3 class="footer__title footer__title--primary">Ростов на дону, Торговый центр Plaza
         Прямой телефон +7 (999) 768 32 99</h3>
 
@@ -427,8 +425,7 @@
           </div>
 
           <div class="map footer__map">
-            <script type="text/javascript" charset="utf-8" async
-              src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4f6cadfa2ff702c90f01110f0d1ce9591436bc14b0cd7663ca9f573bf697f99b&amp;width=70%25&amp;height=430&amp;lang=ru_RU&amp;scroll=false">
+            <script async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4f6cadfa2ff702c90f01110f0d1ce9591436bc14b0cd7663ca9f573bf697f99b&amp;width=70%25&amp;height=430&amp;lang=ru_RU&amp;scroll=false">
             </script>
           </div>
         </div>
@@ -463,21 +460,21 @@
       </button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
     
-      <form action="send.php" method="POST" class="form modal__form">
+      <form action="php/send_modal.php" method="POST" class="form modal__form">
 
         <div class="input-group modal__input-group">
-          <label for="user-name" class="label form__label label--light">Имя</label>
-          <input type="text" name="userName" class="input input--light form__input modal__input" id="user-name"
+          <label for="user-name-modal" class="label form__label label--light">Имя</label>
+          <input type="text" name="userName" class="input input--light form__input modal__input" id="user-name-modal"
             placeholder="Как вас зовут:">
         </div>
         <div class="input-group modal__input-group">
-          <label for="user-phone" class="label form__label label--light">Телефон</label>
-          <input type="tel" name="userPhone" class="input input--light form__input modal__input" id="user-phone"
+          <label for="user-phone-modal" class="label form__label label--light">Телефон</label>
+          <input type="tel" name="userPhone" class="input input--light form__input modal__input" id="user-phone-modal"
             placeholder="Ваш номер телефона:">
         </div>
         <div class="input-group modal__input-group">
-          <label for="user-email" class="label form__label label--light">Email</label>
-          <input type="email" name="userEmail" class="input input--light form__input modal__input" id="user-email"
+          <label for="user-email-modal" class="label form__label label--light">Email</label>
+          <input type="email" name="userEmail" class="input input--light form__input modal__input" id="user-email-modal"
             placeholder="Ваш email:">
         </div>
 
@@ -493,9 +490,21 @@
     <!-- /.modal-dialog -->
   </div>
   <!-- /.modal -->
-
-
- 
+  
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $("#menu").on("click", "a", function (event) {
+      event.preventDefault();
+      var id = $(this).attr('href'),
+        top = $(id).offset().top;
+      $('body,html').animate({
+        scrollTop: top
+      }, 1500);
+    });
+  });
+</script>
+  
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/wow.min.js"></script>
